fix taglist on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,13 +18,6 @@
   --link: var(--col2);
   --vlink: var(--col1);
 
-  /* --navmenu-direction: row;
-  --navmenu-gap: var(--fixedspace);
-  --navmenu-padding: var(--fixedspace);
-  --navmenu-curve: 0;
-  --navmenu-margin: 0;
-  --navmenu-wrap: wrap; */
-
   --navmenu-direction: column;
   --navmenu-gap: calc(var(--fixedspace) / 4);
   --navmenu-padding: calc(var(--fixedspace) / 4);
@@ -41,13 +34,6 @@
   --navmenu-a-padding: 0.5em 0.2em;
   --navmenu-socials-icon-size: 32px;
 
-  /* --taglist-direction: row;
-  --taglist-gap: var(--fixedspace);
-  --taglist-padding: 0 var(--fixedspace) var(--fixedspace) var(--fixedspace);
-  --taglist-curve: 0;
-  --taglist-margin: 0;
-  --taglist-wrap: wrap; */
-
   --taglist-direction: column;
   --taglist-gap: calc(var(--fixedspace) / 4);
   --taglist-padding: calc(var(--fixedspace) / 4);
@@ -59,7 +45,7 @@
 
   --gridcols: 1fr;
   --gridrows: auto auto auto auto 1fr auto;
-  --gridtemplateareas: "header" "menu" "taglist" "metadata" "article" "footer";
+  --gridtemplateareas: "header" "menu" "metadata" "article" "taglist" "footer";
 
   --headergridcols: auto;
   --headergridrows: auto;
@@ -115,12 +101,6 @@
     --gridtemplateareas: "header header" "menu article" "taglist article"
       ". article" ". footer";
 
-    --navmenu-direction: column;
-    --navmenu-gap: calc(var(--fixedspace) / 4);
-    --navmenu-padding: calc(var(--fixedspace) / 4);
-    --navmenu-curve: var(--buttoncurve);
-    --navmenu-margin: 1em;
-    --navmenu-wrap: nowrap;
     --navmenu-aside-position: sticky;
     --navmenu-width: unset;
     --navmenu-height: unset;
@@ -131,12 +111,7 @@
     --navmenu-a-padding: 0.1em 0.2em;
     --navmenu-socials-icon-size: 26px;
 
-    --taglist-direction: column;
-    --taglist-gap: calc(var(--fixedspace) / 4);
-    --taglist-padding: calc(var(--fixedspace) / 4);
-    --taglist-curve: var(--buttoncurve);
-    --taglist-margin: 1em;
-    --taglist-wrap: nowrap;
+  --taglist-margin: 0;
 
     --flexgrow: 1;
 
@@ -425,6 +400,9 @@ nav h2 {
   justify-content: flex-start;
   background-color: var(--col1light);
   margin-top: var(--navmenu-margin);
+  margin-bottom: var(--navmenu-margin);
+  margin-left: var(--taglist-margin);
+  margin-right: var(--taglist-margin);
 }
 
 .innerlist {
@@ -434,7 +412,6 @@ nav h2 {
   flex-wrap: var(--taglist-wrap);
 }
 
-#taglist a,
 .link-block {
   text-decoration: none;
   list-style-type: none;
@@ -450,7 +427,8 @@ nav h2 {
   display: inline-block;
 }
 
-#navmenu a {
+#navmenu a,
+#taglist a {
   text-decoration: none;
   list-style-type: none;
   cursor: pointer;
